--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@shopify/polaris": "^5.13.1",
     "@shopify/polaris-icons": "^4.1.0",
+    "framer-motion": "^3.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
